--- a/assets/style.css
+++ b/assets/style.css
@@ -83,6 +83,8 @@ nav a {
   text-decoration: none;
 }
 
+
+
 nav a:hover {
   color: var(--light);
 }
@@ -102,7 +104,7 @@ article {
 
 
 article p {
-  margin: 2% 0;
+  margin-left: 20px;
   font-size: 110%;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   color: var(--light)
@@ -112,12 +114,58 @@ article p {
 .pers-img {
   height: 350px;
     width: 300px;
-    margin:auto;
+    image-resolution:inherit;
+    margin-left: 20px;
     border: 5px solid var(--light);
     
+    
 }
-/* Here I made a class pers-img to ensure my image wasn't too big or too small */
+/* above I made a class called pers-img to ensure my personal image had decent height 
+and width (so it wasn't blurry) */
 
+.snip-img {
+  height:100%;
+  width: 40%;
+  margin: auto;
+  border: 5px solid var(--light);
+}
+
+.web-img {
+  height:60%;
+  width: 40%;
+  margin: auto;
+  border: 5px solid var(--light);
+}
+
+.card {
+  border-style: solid;
+  border-width: 1px;
+  border-radius: 50px;
+  padding: 10px;
+  flex: 0 0 200px;
+  box-shadow: 10px 10px 5px #aaaaaa;
+  margin: 20px;
+}
+
+.sites {
+  flex: 5;
+  padding: 50px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: flex-start;
+}
+/* Above I created classes for the images, and a class to make a card for each image as well! */
+
+
+.big-img {
+  padding: 10px;
+  height:100%;
+  width: 80%;
+  margin-left: 20px;
+  border: 5px solid var(--light);
+}
+/* Here the biggest image is styled with the class big-img */
 
 
 @media screen and (max-width: 768px) {
