--- a/assets/style.css
+++ b/assets/style.css
@@ -107,7 +107,8 @@ article p {
   margin-left: 20px;
   font-size: 110%;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  color: var(--light)
+  color: var(--light);
+  line-height:26px;
   
 }
 
@@ -117,6 +118,7 @@ article p {
     image-resolution:inherit;
     margin-left: 20px;
     border: 5px solid var(--light);
+    -webkit-transtion:opacity 0.5s;
     
     
 }
